--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,4 +2,55 @@
 
 /*
 PALETA DE CORES: Amarelo, Laranja e Branco.
+Laranja: rgba(255, 166, 0, 0.862)
 */
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color: rgba(255, 166, 0, 0.862);
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius:  20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.562);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
+}
+
+#login > #imagem{
+    background:  rgba(255, 166, 0, 0.862) url(../imagens/pexels-apasaric-1.jpg) no-repeat ;
+
+    background-size: cover;
+    height: 200px;
+    display: block;
+}
+
+#login > #formulario{
+    display: block;
+    padding: 10px;
+
+}
