--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -44,15 +44,24 @@
         }
 
         #login > #imagem{
-            float: left;
+            float: right;
             width: 50%;
             height: 100%;
           }
 
 
          #login > #formulario{
-            float: right;
+            float: left;
             width: 50%;
             height: 100%;
           }
+
+          #formulario > h1{
+            font-size: 2em;
+          }
+
+          #formulario > p{
+            font-size: 1.2em;
+            
+        }
     }
