--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,3 +54,13 @@ main{
     padding: 10px;
 
 }
+
+#formulario > h1{
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+#formulario > p{
+    font-size: 0.8em;
+    
+}
