--- a/estilos/style.css
+++ b/estilos/style.css
@@ -62,5 +62,59 @@ main{
 
 #formulario > p{
     font-size: 0.8em;
-    
+
+}
+
+
+form > div.campo{
+    background-color: rgba(255, 94, 0, 0.862);
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label{
+    display: none;
+} 
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    background-color:  rgba(255, 166, 0, 0.862);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: rgba(179, 116, 0, 0.862);
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    margin-top: 5px;
+    background-color: white;
+    border: 1px solid rgba(255, 166, 0, 0.707) ;
+    color: rgba(179, 116, 0, 0.862);
+    border-radius: 10px;
+    text-decoration: none;
+
+}
+
+form > a.botao:hover{
+    background-color:rgba(179, 116, 0, 0.862) ;
+    color: white;
+}
+
+form > a.botao > i{
+    font-size: 0.8em;
 }
