--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -15,7 +15,7 @@
 
         #login{
             width: 80vw;
-            
+            height: 40vh;
         }
 
         #login > #imagem{
@@ -41,6 +41,8 @@
 
         #login{
             width: 950px;
+
+            height: 50vh;
         }
 
         #login > #imagem{
@@ -62,6 +64,6 @@
 
           #formulario > p{
             font-size: 1.2em;
-            
+            margin: 10px 0px;
         }
     }
