--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,7 +28,7 @@ main{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate( -50%, -50%);
+    
 
     background-color: white;
     width: 250px;
@@ -37,6 +37,7 @@ main{
     overflow: hidden;
     box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.562);
 
+    transform: translate( -50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -77,7 +78,34 @@ form > div.campo{
 
 div.campo > label{
     display: none;
+    
 } 
+
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+
+}
+
+div.campo > input{
+    background-color: rgba(255, 255, 0, 0.508);
+    font-size: 1em;
+
+    width: calc(100% - 45px);
+    height: 100%;
+    border: none;
+    border-radius: 5px;
+    padding: 2px;
+
+    transform: translateY(-10px);
+}
+
+div.campo > input:focus-within{
+    background-color: white;
+}
+
 
 form > input[type=submit]{
     display: block;
